iter_language/tests/corpus/invalid/queue-shell-missing-dequeue.iter
queue shell {
  enqueue = "true"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}
